=== HEAD

* Add support for connecting to MySQL over SSL using the :sslca, :sslkey, and related options (jeremyevans)

* Fix Database#each_server when used with jdbc or do connection strings without separate :adapter option (jeremyevans) (#312)

* Much better support in the AS400 JDBC subadapter (bhauff)

* Allow cloning of many_through_many associations (gucki, jeremyevans)

* In the nested_attributes plugin, don't make unnecessary update calls to modify associated objects that are about to be deleted (jeremyevans, gucki)

* Allow Dataset#(add|set)_graph_aliases to accept as hash values symbols and arrays with a single element (jeremyevans)

* Add Databse#views and #view_exists? to the Oracle adapter (gpheruson)

* Add Database#sql_log_level for changing the level at which SQL queries are logged (jeremyevans)

* Remove unintended use of prepared statements in swift adapter (jeremyevans)

* Fix logging in the swift PostgreSQL subadapter (jeremyevans)

=== 3.16.0 (2010-10-01)

* Support composite foreign keys for associations in the identity_map plugin (harukizaemon, jeremyevans) (#310)

* Handle INTERSECT and EXCEPT on Microsoft SQL Server 2005+ (jfirebaugh)

* Add :replace option to Database#create_language in the postgresql adapter (jeremyevans)

* Make rcte_tree plugin work when not all columns are selected (jeremyevans)

* Add swift adapter (jeremyevans)

* Fix literalization of DateTime objects on 1.9 for databases that support fractional seconds (jeremyevans)

=== 3.15.0 (2010-09-01)

* Make emulated alter_table tasks on SQLite correctly preserve foreign keys (DirtYiCE, jeremyevans)

* Add support for sequel_pg to the native postgres adapter when pg is used (jeremyevans)

* Make class MyModel < Sequel::Model(DB[:table]) reload safe (jeremyevans)

* Fix a possible error when using the do (DataObjects) adapter with postgres (jeremyevans)

* Handle a many_to_many :join_table option that uses an implicit alias (mluu, jeremyevans)
