@@ -117,8 +117,9 @@ module Sequel
         # that feature.
         sqls << "SET NAMES #{literal(encoding.to_s)}" if encoding
 
-        # increase timeout so mysql server doesn't disconnect us
-        sqls << "SET @@wait_timeout = #{opts[:timeout] || 2592000}"
+        # Increase timeout so mysql server doesn't disconnect us
+        # Value used by default is maximum allowed value on Windows.
+        sqls << "SET @@wait_timeout = #{opts[:timeout] || 2147483}"
 
         # By default, MySQL 'where id is null' selects the last inserted id
         sqls << "SET SQL_AUTO_IS_NULL=0" unless opts[:auto_is_null]
