@@ -1,5 +1,7 @@
 === HEAD
 
+* Use a default wait_timeout that's allowed on Windows for the mysql and mysql2 adapters (jeremyevans) (#314)
+
 * Add support for connecting to MySQL over SSL using the :sslca, :sslkey, and related options (jeremyevans)
 
 * Fix Database#each_server when used with jdbc or do connection strings without separate :adapter option (jeremyevans) (#312)
